--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,18 @@
   "description": "assignment 9 backend server",
   "main": "index.js",
   "scripts": {
+    "start": "npx nodemon --exec npx babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "cais-0316",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/node": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "nodemon": "^2.0.20"
   }
 }
