--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
   "author": "cais-0316",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^4.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
