naughty and nice api implemented

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,9 +10,14 @@
 		"args": { "VARIANT": "18-bullseye" }
 	},
 
-	// Configure tool-specific properties.
 	"customizations": {
-		// Configure properties specific to VS Code.
+		// see https://github.com/github/codespaces-react/blob/main/.devcontainer/devcontainer.json
+		"codespaces": {
+			"openFiles": [
+			  "src/App.js"
+			]
+		  },
+		  // Configure properties specific to VS Code.
 		"vscode": {
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
@@ -26,7 +31,10 @@
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "yarn install",
-	"postStartCommand": "/usr/local/bin/mongod --dbpath /var/lib/mongo --logpath /var/log/mongodb/mongod.log --fork",
+	
+	// there will be a prompt if using  
+	//    /usr/local/bin/mongod --dbpath /var/lib/mongo --logpath /var/log/mongodb/mongod.log --fork
+	"postStartCommand": "/usr/local/bin/mongod -f mongo/mongod.conf",
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "node"
