--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx nodemon --exec npx babel-node index.js",
+    "reap" : "ps aux | grep nodemon | grep -v grep | awk '{print $2}' | xargs kill -9",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "cais-0316",
